fixed bugs and added text user